# bamboolia

./: .gitignore  CMakeLists.txt  README.md  bamboolia-serve.py  index.js  package-lock.json  package.json  requirements.txt  siml-serve.py  siml.py  simp-schema.json
aolab/v1/: lamp.yml
aolab/v2/: lamp.yml
config/: custom-environment-variables.js  default.js
siml/: model.py  parser.py
src/: CMakeLists.txt  agent.js  dm.js  main.c  tm.js  type.js
standard/: lamp.yml
